// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide toggle: should render a checked state 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      checked={true}
      className="input"
      id="testToggle"
      type="checkbox"
    />
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <Icon
          animation=""
          className="icon"
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="svg"
          type="check"
        />
      </div>
    </div>
    <Text
      baseline={false}
      className="label labelRight"
    >
      <span
        className="labelText"
      >
        Test toggle
      </span>
    </Text>
  </div>
</label>
`;

exports[`Slide toggle: should render with default props 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      type="checkbox"
    />
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <Icon
          animation=""
          className="icon"
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="svg"
          type="check"
        />
      </div>
    </div>
    <Text
      baseline={false}
      className="label labelRight"
    >
      <span
        className="labelText"
      >
        Test toggle
      </span>
    </Text>
  </div>
</label>
`;

exports[`Slide toggle: should render with the label hidden 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input"
      id="testToggle"
      type="checkbox"
    />
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <Icon
          animation=""
          className="icon"
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="svg"
          type="check"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`Slide toggle: should render with the label on the left 1`] = `
<label
  className="root"
  htmlFor="testToggle"
>
  <div
    className="switch"
  >
    <input
      aria-label="Test toggle"
      className="input inputLeft"
      id="testToggle"
      type="checkbox"
    />
    <Text
      baseline={false}
      className="label labelLeft"
    >
      <span
        className="labelText"
      >
        Test toggle
      </span>
    </Text>
    <div
      className="slider"
    >
      <div
        className="slideButton"
      >
        <Icon
          animation=""
          className="icon"
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="svg"
          type="check"
        />
      </div>
    </div>
  </div>
</label>
`;
